Fixed blue tel underline on iOS

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -863,3 +863,8 @@ li {
 *:focus {
   outline: 0 !important;
 }
+
+a[href^="tel"] {
+  color: inherit; /* Inherit text color of parent element. */
+  text-decoration: none; /* Remove underline. */
+}
